templates/tekton-pipelines_template.yaml
---
# Source: tekton-pipelines/templates/controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-pipelines-controller
  labels:
    app: tekton-pipelines-controller
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: controller
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: v0.37.2
    pipeline.tekton.dev/release: v0.37.2
    version: v0.37.2
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: controller
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
  ports:
  - name: http-metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: http-profiling
    port: 8008
    targetPort: 8008
  - name: probes
    port: 8080
    targetPort: 0
---
# Source: tekton-pipelines/templates/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-pipelines-webhook
  labels:
    app: tekton-pipelines-webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: v0.37.2
    pipeline.tekton.dev/release: v0.37.2
    version: v0.37.2
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
  ports:
  - name: http-metrics
    port: 9090
    targetPort: 9090
  - name: http-profiling
    port: 8008
    targetPort: 8008
  - name: https-webhook
    port: 443
    targetPort: 8443
  - name: probes
    port: 8080
    targetPort: 0
---
# Source: tekton-pipelines/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-pipelines-controller
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: controller
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: v0.37.2
    pipeline.tekton.dev/release: v0.37.2
    version: v0.37.2
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: default
      app.kubernetes.io/name: controller
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/name: tekton-pipelines
      app.kubernetes.io/instance: default
      app.kubernetes.io/part-of: tekton-pipelines
  template:
    metadata:
      labels:
        app: tekton-pipelines-controller
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: default
        app.kubernetes.io/name: controller
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/version: v0.37.2
        pipeline.tekton.dev/release: v0.37.2
        version: v0.37.2
        app.kubernetes.io/name: tekton-pipelines
        app.kubernetes.io/instance: default
        app.kubernetes.io/part-of: tekton-pipelines
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
      containers:
        - args:
          - -kubeconfig-writer-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/kubeconfigwriter:v0.37.2
          - -git-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/git-init:v0.37.2
          - -entrypoint-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/entrypoint:v0.37.2
          - -nop-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/nop:v0.37.2
          - -imagedigest-exporter-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/imagedigestexporter:v0.37.2
          - -pr-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/pullrequest-init:v0.37.2
          - -workingdirinit-image
          - gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/workingdirinit:v0.37.2
          - -gsutil-image
          - gcr.io/google.com/cloudsdktool/cloud-sdk@sha256:27b2c22bf259d9bc1a291e99c63791ba0c27a04d2db0a43241ba0f1f20f4067f
          - -shell-image
          - ghcr.io/distroless/busybox@sha256:19f02276bf8dbdd62f069b922f10c65262cc34b710eea26ff928129a736be791
          - -shell-image-win
          - mcr.microsoft.com/powershell:nanoserver@sha256:b6d5ff841b78bdf2dfed7550000fd4f3437385b8fa686ec0f010be24777654d6
          image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/controller:v0.37.2
          livenessProbe:
            httpGet:
              path: /health
              port: probes
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: tekton-pipelines-controller
          ports:
            - containerPort: 9090
              name: metrics
            - containerPort: 8008
              name: profiling
            - containerPort: 8080
              name: probes
          readinessProbe:
            httpGet:
              path: /readiness
              port: probes
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            runAsGroup: 65532
            runAsUser: 65532
          volumeMounts:
            - mountPath: /etc/config-logging
              name: config-logging
            - mountPath: /etc/config-registry-cert
              name: config-registry-cert
      serviceAccountName: tekton-pipelines-controller
      volumes:
        - configMap:
            name: config-logging
          name: config-logging
        - configMap:
            name: config-registry-cert
          name: config-registry-cert
---
# Source: tekton-pipelines/templates/webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-pipelines-webhook
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: default
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: v0.37.2
    pipeline.tekton.dev/release: v0.37.2
    version: v0.37.2
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: default
      app.kubernetes.io/name: webhook
      app.kubernetes.io/part-of: tekton-pipelines
      app.kubernetes.io/name: tekton-pipelines
      app.kubernetes.io/instance: default
      app.kubernetes.io/part-of: tekton-pipelines
  template:
    metadata:
      labels:
        app: tekton-pipelines-webhook
        app.kubernetes.io/component: webhook
        app.kubernetes.io/instance: default
        app.kubernetes.io/name: webhook
        app.kubernetes.io/part-of: tekton-pipelines
        app.kubernetes.io/version: v0.37.2
        pipeline.tekton.dev/release: v0.37.2
        version: v0.37.2
        app.kubernetes.io/name: tekton-pipelines
        app.kubernetes.io/instance: default
        app.kubernetes.io/part-of: tekton-pipelines
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: webhook
                  app.kubernetes.io/instance: default
                  app.kubernetes.io/name: webhook
                  app.kubernetes.io/part-of: tekton-pipelines
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: SYSTEM_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CONFIG_LOGGING_NAME
          value: config-logging
        - name: CONFIG_OBSERVABILITY_NAME
          value: config-observability
        - name: CONFIG_LEADERELECTION_NAME
          value: config-leader-election
        - name: CONFIG_FEATURE_FLAGS_NAME
          value: feature-flags
        - name: WEBHOOK_SERVICE_NAME
          value: tekton-pipelines-webhook
        - name: WEBHOOK_SECRET_NAME
          value: webhook-certs
        - name: METRICS_DOMAIN
          value: tekton.dev/pipeline
        - name: KUBERNETES_CLUSTER_DOMAIN
          value: cluster.local
        image: gcr.io/tekton-releases/github.com/tektoncd/pipeline/cmd/webhook:v0.37.2
        livenessProbe:
          httpGet:
            path: /health
            port: probes
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        name: webhook
        ports:
        - containerPort: 9090
          name: metrics
        - containerPort: 8008
          name: profiling
        - containerPort: 8443
          name: https-webhook
        - containerPort: 8080
          name: probes
        readinessProbe:
          httpGet:
            path: /readiness
            port: probes
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          runAsGroup: 65532
          runAsUser: 65532
      serviceAccountName: tekton-pipelines-webhook
---
# Source: tekton-pipelines/templates/webhook/mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.pipeline.tekton.dev
  labels:
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'tekton-pipelines-webhook'
      namespace: 'default'
  failurePolicy: Fail
  name: webhook.pipeline.tekton.dev
  sideEffects: None
---
# Source: tekton-pipelines/templates/webhook/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.pipeline.tekton.dev
  labels:
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'tekton-pipelines-webhook'
      namespace: 'default'
  failurePolicy: Fail
  name: validation.webhook.pipeline.tekton.dev
  sideEffects: None
---
# Source: tekton-pipelines/templates/webhook/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.pipeline.tekton.dev
  labels:
    helm.sh/chart: tekton-pipelines-0.37.2
    app.kubernetes.io/name: tekton-pipelines
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    app.kubernetes.io/version: "v0.37.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: 'tekton-pipelines-webhook'
      namespace: 'default'
  failurePolicy: Fail
  name: config.webhook.pipeline.tekton.dev
  objectSelector:
    matchLabels:
      app.kubernetes.io/part-of: tekton-pipelines
  sideEffects: None
